optimized compiling process through CMake and make (compiled program runs faster)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 2.8.8)
 
 PROJECT(CellularAutomaton)
 
+#openmp
+FIND_PACKAGE( OpenMP )
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS} -m64 -pipe -std=c++11 -O2 -Wall -W -D_REENTRANT")
+MESSAGE("------- Adding compiler parameter for OpenMP")
+ADD_DEFINITIONS(-DOPENMP_ENABLE)
+
 # Tell CMake to run moc when necessary:
 set(CMAKE_AUTOMOC ON)
 # As moc files are generated in the binary dir, tell CMake
